Adjust form styling to prevent shifting right on extra large screens.

--- a/static/css/booking-form.css
+++ b/static/css/booking-form.css
@@ -26,7 +26,7 @@ a.btn-delete {
     padding: 48px;
     display: flex;
     justify-content: space-around;
-    align-items: flex-start;
+    align-items: center;
     flex-wrap: wrap;
 }
 
